[package]
name = "leptos-by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
fuzzy-matcher = "0.3.7"
leptos = { version = "0.5.0", features = ["csr", "nightly"] }
reqwasm = "0.5.0"
serde = "1.0.188"
serde_json = "1.0.107"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
thiserror = "1.0.49"
uuid = {version="1.4.1", features= ["v4", "js", "serde"]}
web-sys = { version = "0.3.60", features = ["Storage"] }
getrandom = { version = "0.2", features = ["js"] }
leptos-use = "0.7.1"
leptos_router = {version="0.5.1", features=["csr"]}


[build-dependencies]
prettyplease = "0.2.15"
proc-macro2 = "1.0.67"
pulldown-cmark = "0.9.3"
quote = "1.0.33"
serde = "1.0.188"
syn = {version="2.0.37", features=["parsing"]}
syntect = "5.0.0"
toml = "0.8.0"
